syntax = "proto3";

package protobuf;

option go_package = "/pb";


service AuthService {
    rpc SignUp (SignUpRequest) returns (SignUpResponse) {};

    rpc SignIn (SignInRequest) returns (SignInResponse) {};

    rpc Validate (ValidateRequest) returns (ValidateResponse);
};

message SignUpRequest {
    string FullName = 1;
    string Email = 2;
    string Password = 3;
    string PhoneNum = 4;
    string BirthDate = 5;
};

message SignUpResponse {
    int32 Status = 1;
    string Error = 2; 
};

message SignInRequest {
    string Email = 1;
    string Password = 2;
};

message SignInResponse {
    int32 Status = 1;
    string Error = 2; 
    string Token = 3;
};

message ValidateRequest {
    string Token = 1;
};

message ValidateResponse {
    int32 Status = 1;
    string Error = 2;
    int64 UserID = 3;
};


